--- a/style.css
+++ b/style.css
@@ -5,6 +5,33 @@ body {
   padding: 0;
 }
 
+#loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  z-index: 9999;
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+
+.loading-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.loading-content img {
+  width: 100%; /* Define a largura do GIF como 100% */
+  height: auto; /* Mantém a proporção da altura */
+}
 .countdown-container {
   text-align: center;
   font-size: 40px;
