--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body {
+* {
   font-family: Arial, sans-serif;
-  background-color: white;
+  background-color: transparent;
   margin: 0;
   padding: 0;
 }
@@ -32,9 +32,27 @@ body {
   width: 100%; /* Define a largura do GIF como 100% */
   height: auto; /* Mantém a proporção da altura */
 }
+
+#state {
+  font-size: x-large;
+  margin: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#state span {
+  margin-right: 10px;
+}
+
+#state select {
+  font-size: large;
+}
+
 .countdown-container {
   text-align: center;
   font-size: 40px;
+  margin-top: 5%;
 }
 
 #countdown {
@@ -86,4 +104,116 @@ body {
 #label-seconds {
   font-size: 30px;
   margin: 10px;
+}
+
+hr {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.column-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.column-item {
+  max-width: 50%;
+  margin: 0 auto;
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.column-item h1 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+  background-color: #f9f9f9;
+  text-align: center;
+}
+
+.column-item p,
+.column-item b,
+.column-item ul,
+.column-item li {
+  font-size: 18px;
+  color: #555;
+  margin-bottom: 20px;
+  line-height: 1.5;
+  background-color: #f9f9f9;
+  list-style-position: inside;
+}
+
+#otherHolidays-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#municipios,
+#feriados {
+  display: flex;
+  flex-direction: column;
+  max-width: 50%;
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-right: 10px;
+}
+
+#comemorativos {
+  display: flex;
+  flex-direction: column;
+  max-width: 50%;
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#municipios h2,
+#comemorativos h2,
+#feriados h2 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+  background-color: #f9f9f9;
+  text-align: center;
+}
+
+#municipios p,
+#comemorativos p,
+#feriados p {
+  font-size: 18px;
+  margin-bottom: 10px;
+  line-height: 1.5;
+  background-color: #f9f9f9;
+}
+
+.passado {
+  color: rgb(92, 92, 92); /* Cinza para datas passadas */
+}
+
+.hoje {
+  color: rgb(47, 167, 0); /* Vermelho para a data de hoje */
+}
+
+.futuro {
+  color: black; /* Preto para datas futuras */
+}
+
+#tsparticles {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.5;
 }
